--- a/ink-insight/package.json
+++ b/ink-insight/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,16 +19,14 @@
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "tailwindcss": "^4.1.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +49,9 @@
   "description": "## Short Description InkInsight is designed to facilitate the reading journey for book enthusiasts by providing a user-friendly interface. The app enables users to explore a diverse library, discover comprehensive book metadata, and customize reading lists while expressing their opinions through a user-friendly rating system.",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.1"
+  }
 }
